<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- ==================== -->
	<!-- GitHub configuration -->
	<!-- ==================== -->

	<scm>
		<url>https://github.com/javolution/javolution</url>
		<connection>scm:git:git://github.com/javolution/javolution</connection>
		<developerConnection>scm:git:git@github.com:javolution/javolution.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/javolution/javolution/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<!-- ======================================= -->
	<!-- Project description (including license) -->
	<!-- ======================================= -->

	<groupId>org.javolution</groupId>
	<artifactId>javolution</artifactId>
	<version>7.0.0-SNAPSHOT</version>

	<packaging>bundle</packaging>
	<name>Javolution</name>
	<url>http://javolution.org</url>
	<description>Java Library for Real-Time and High-Performance Applications.</description>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/javolution/javolution/blob/master/LICENSE</url>
		</license>
	</licenses>

	<!-- ==================== -->
	<!-- Library Dependencies -->
	<!-- ==================== -->

	<dependencies>
		<dependency> <!-- To support Javolution C++ build (MSVC2015 environment factory) -->
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>native-maven-plugin</artifactId>
			<version>1.0-alpha-8</version>
		</dependency>
		<dependency> <!-- OSGI Core Library -->
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.3.1</version>
		</dependency>
		<dependency> <!-- OSGI Compendium (log service) -->
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<version>4.3.1</version>
		</dependency>
		<dependency> <!-- OpenCL Binding -->
			<groupId>com.nativelibs4java</groupId>
			<artifactId>javacl</artifactId>
			<version>1.0.0-RC4</version>
		</dependency>
		<dependency> <!-- JAXB API (no more included in Java SE 9+)  -->
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.2.11</version>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>

            <!-- ============================= -->
            <!-- Java Compiler Required (1.8+) -->
            <!-- ============================= -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
				    <source>1.8</source>
				    <target>1.8</target>
				</configuration>
			</plugin>
			
			<!-- ============== -->
			<!-- OSGi Packaging -->
			<!-- ============== -->

			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>3.2.0</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>!org.javolution.*.internal.*,org.javolution.*,org.osgi.service.log</Export-Package>
						<Private-Package>org.javolution.*.internal.*,javax.realtime.*</Private-Package>
						<Bundle-Activator>org.javolution.osgi.internal.JavolutionActivator</Bundle-Activator>
						<Export-Service>org.javolution.xml.stream.XMLInputFactory,
							org.javolution.xml.stream.XMLOutputFactory</Export-Service>
					</instructions>
				</configuration>
			</plugin>

			<!-- =============================== -->
			<!-- Source code packaging (for IDE) -->
			<!-- =============================== -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- =========================== -->
			<!-- Javadoc packaging (for IDE) -->
			<!-- =========================== -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
					<docletArtifact>
						<groupId>ch.raffael.pegdown-doclet</groupId>
						<artifactId>pegdown-doclet</artifactId>
						<version>1.3</version>
					</docletArtifact>
					<excludePackageNames>javax.*,*.internal</excludePackageNames>
					<docfilessubdirs>true</docfilessubdirs>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

</project>